# awesome-skills

./: .gitignore  .yamllint  CATALOG.md  CONTRIBUTING.md  EXECUTIVE-SUMMARY.md  INSTALL-GUIDE.md  README.md  index.html  skill-writer-evaluation-report.md  taxonomy.yml
.github/: CI.md
.github/scripts/: quality_gate.py  validate_skills.py
.github/workflows/: comprehensive-evaluation.yml  quality.yml
assets/js/: skills-data.js
benchmarks/: README.md
docs/enterprise-dev/: README.md
reports/: COMPREHENSIVE_EVALUATION_REPORT.md  description_overlap.md
schema/: frontmatter.schema.json
scripts/: add_missing_h1.py  backfill_descriptions.py  check_taxonomy.py  cleanup_skills.py  cleanup_skills_pass2.py  dedupe_references.py  description_linter.py  fix_name_folder_mismatch.py  generate_skills_data.py  regenerate_catalog.py  skill_length_check.py  sync_external.py  tag_skills_kind.py  update_project_files.py
skills/admin/administrative-manager/: SKILL.md
skills/admin/chef/: SKILL.md
skills/admin/cleaning-staff/: SKILL.md
skills/admin/driver/: SKILL.md
skills/admin/executive-assistant/: SKILL.md
skills/admin/purchasing-specialist/: SKILL.md
skills/admin/receptionist/: SKILL.md
skills/admin/security-guard/: SKILL.md
skills/admin/warehouse-manager/: SKILL.md
skills/aerospace/aircraft-design-engineer/: SKILL.md
skills/aerospace/airworthiness-certification-engineer/: SKILL.md
tools/: pyproject.toml
tools/skill_analyzer/: antipattern.py  cli.py  context_budget.py  llm_evaluator.py  scorer.py  semantic_search.py  skill_graph.py  yaml_utils.py
(+2504 files in other folders)
